--- a/Templates/Designs/TTonline/New_Homepage.cshtml
+++ b/Templates/Designs/TTonline/New_Homepage.cshtml
@@ -70,6 +70,7 @@
 <!-- </div> -->
 
 @RenderSnippet("ProductCarouselModal")
+<div id="loader"><div class="loader-icon"></div></div>
 <!-- Google Analytics -->
 <script>
 window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
