--- a/Templates/Designs/TTonline/Paragraph/New_ArticleListRecomandari.cshtml
+++ b/Templates/Designs/TTonline/Paragraph/New_ArticleListRecomandari.cshtml
@@ -21,8 +21,15 @@
 		<span>@Translate("recomandari","Recomandari") T&T</span>
 	</h3>
     <div id="RecomandariTT" data-template="RecomandariTTTemplate" data-json-feed="/Default.aspx?ID=@pageId&PageID=@articlesIDs">
-        <div class="loader"></div>
-        @*HANDLEBARS TEMPLATE GOES HERE*@
+         <div class="row">
+             <div class="pre-render-element pre-render-element--xl"></div>
+             <div class="col-md-6">
+                <div class="pre-render-element pre-render-element--lg"></div>
+             </div>
+             <div class="col-md-6">
+                 <div class="pre-render-element pre-render-element--lg"></div>
+              </div>
+        </div>
     </div>
 </div>
 
