--- a/Templates/Designs/TTonline/Paragraph/New_ListaStiriHomepage.cshtml
+++ b/Templates/Designs/TTonline/Paragraph/New_ListaStiriHomepage.cshtml
@@ -26,8 +26,11 @@
       
         @*if(GetBoolean("ItemPublisher:Items.Any")){*@
         <ul class="widget-content" id="UltimeleStiri" data-template="UltimeleStiriTemplate" data-json-feed="/Default.aspx?ID=@pageId&type=Stiri">
-            <div class="loader"></div>
-            @*HANDLEBARS TEMPLATE GOES HERE*@
+            <li class="pre-render-element pre-render-element--md"></li>
+            <li class="pre-render-element pre-render-element--md"></li>
+            <li class="pre-render-element pre-render-element--md"></li>
+            <li class="pre-render-element pre-render-element--md"></li>
+            <li class="pre-render-element pre-render-element--md"></li>
         </ul>
     </div>  
 </div>
