--- a/Templates/Designs/TTonline/Paragraph/New_ListStiri.cshtml
+++ b/Templates/Designs/TTonline/Paragraph/New_ListStiri.cshtml
@@ -6,52 +6,93 @@
 
 @Include("../Custom/GlobalVariables.cshtml")
 @Include("../Includes/GetImage_new.cshtml")
-
 @{
     var stiriPageID = GetPageIdByNavigationTag("ArticlesFeed").ToString();
-    var sectionID = GetString("DwPageID");
+    var sectionID = System.Web.HttpContext.Current.Request.Params["Sectiune"];
+    var url = "/Default.aspx?ID="+stiriPageID+"&pagesize=12&type=Stiri";
+    if (!string.IsNullOrEmpty(sectionID))
+    {
+        url += "&Sections="+ sectionID;
+    }
+
 }
 <div>
     <div class="row">
-<div class="row">
-    <div class="col-xs-12">
-        <h3 class="block-title" style="margin-top:25px!important;"><span>@Translate("Stiri","Stiri")</span></h3>
-        <div class="first-container" id="LoopStiri" data-template="LoopStiriTemplate" data-json-feed="/Default.aspx?ID=@stiriPageID&pagesize=12&type=Stiri">
-            @*Handlebars goes here*@ 
+        <div class="col-xs-12">
+            <h3 class="block-title" style="margin-top:25px!important;"><span>@Translate("Stiri", "Stiri")</span></h3>
+            <div class="first-container" id="LoopStiri" data-template="LoopStiriTemplate" data-json-feed="@url">
+                <ul class="widget-content">
+                    <li class="pre-render-element pre-render-element--md"></li>
+                    <li class="pre-render-element pre-render-element--md"></li>
+                    <li class="pre-render-element pre-render-element--md"></li>
+                    <li class="pre-render-element pre-render-element--md"></li>
+                    <li class="pre-render-element pre-render-element--md"></li>
+                </ul>
+            </div>
         </div>
     </div>
-</div>
 </div>
 <script id="LoopStiriTemplate" type="text/x-handlebars-template">
 {{#ArticlesContainer}}
     {{#each Article}}
-<article class="simple-post simple-big clearfix col-md-12 separator-articole">
-    <div class="simple-thumb" style="width: 250px!important;">
-        <a href="/Default.aspx?ID={{pagePageID}}">
-            <figure class="">
-                <img src="/Admin/Public/GetImage.ashx?Image={{itemImaginePrincipala}}&AlternativeImage=/Files/Images/Articole/download (1).png&Crop=0&Format=jpg&Width=255&Height=168"/> 
-            </figure>
-        </a>
-    </div>
-    <header>
-        <p class="simple-share">
-                @Translate("articolde", "de")
-                {{#each articleAutori}}
-                    <a href="{{Link}}">{{Name}}</a>
-                {{/each}}
-                <span style="margin: 0 !important;">-</span>
-            <span><i class="fa fa-clock-o"></i> {{itemData}}</span>
-            {{#if showItemVisits}} 
-                <span><i class="fa fa-eye"></i> {{itemVisits}} vizualizari</span>
-             {{/if}}
+        <article class="simple-post simple-big clearfix col-md-12 separator-articole">
+            <div class="simple-thumb" style="width: 250px!important;">
+                <a href="/Default.aspx?ID={{pagePageID}}">
+                    <figure class="">
+                        <img src="/Admin/Public/GetImage.ashx?Image={{itemImaginePrincipala}}&AlternativeImage=/Files/Images/Articole/download (1).png&Crop=0&Format=jpg&Width=255&Height=168"/> 
+                    </figure>
+                </a>
+            </div>
+            <header>
+                <p class="simple-share">
+                        @Translate("articolde", "de")
+                        {{#each articleAutori}}
+                            <a href="{{Link}}">{{Name}}</a>
+                        {{/each}}
+                        <span style="margin: 0 !important;">-</span>
+                    <span><i class="fa fa-clock-o"></i> {{itemData}}</span>
+                    {{#if showItemVisits}} 
+                        <span><i class="fa fa-eye"></i> {{itemVisits}} vizualizari</span>
+                     {{/if}}
 
-        </p>
-        <h3 style="font-size: 18px;  overflow: hidden;">
-            <a href="/Default.aspx?ID={{pagePageID}}">{{itemTitlu}}</a>
-        </h3>
-        <div class="excerpt" >{{{itemSumar}}}</div>
-    </header>
-</article>
-{{/each}}
+                </p>
+                <h3 style="font-size: 18px;  overflow: hidden;">
+                    <a href="/Default.aspx?ID={{pagePageID}}">{{itemTitlu}}</a>
+                </h3>
+                <div class="excerpt" >{{{itemSumar}}}</div>
+            </header>
+        </article>
+    {{/each}}
 {{/ArticlesContainer}}
+{{#ifCond pagingPageCount '>' 1}}
+    <nav>
+        <ul class="pagination pagination-sm">
+            {{#ifCond currentPage "!==" "1"}}
+                 <li data-page-link="{{pagingFirstPageLink}}" data-container="LoopStiriTemplate">                			        
+                    <span style="margin-right: 0.2em"> « </span>                 
+                 </li>
+                 <li data-page-link="{{pagingPrevPageLink}}" data-container="LoopStiriTemplate">
+                    <span aria-label="@Translate("paginaAnterioara", "Pagina anterioara")"><span aria-hidden="true"><i class="fa fa-angle-left"></i></span></span>
+                 </li>
+            {{/ifCond}}
+            
+            {{#Pages}}
+                {{#if isCurrent}}
+                   <li class="active"><span data-page-link="{{pageLink}}">{{pageNumber}}</span></li>
+                {{else}}
+                   <li data-page-link="{{pageLink}}" data-container="LoopStiriTemplate"><span>{{pageNumber}}</span></li>
+                {{/if}}                
+            {{/Pages}}
+
+            {{#if isNotLastPage}}
+                <li data-page-link="{{pagingNextPageLink}}" data-container="LoopStiriTemplate">
+                    <span aria-label='@Translate("paginaUrmatoare", "Pagina urmatoare")'><span aria-hidden="true"><i class="fa fa-angle-right"></i></span></span>                     
+                </li>
+                <li data-page-link="{{pagingLastPageLink}}" data-container="LoopStiriTemplate">
+                    <span> » </span>
+                </li>
+            {{/if}}
+        </ul>
+    </nav>
+ {{/ifCond}}
 </script>
