--- a/Templates/Designs/TTonline/Includes/PageTemplates/MasterHelpers.cshtml
+++ b/Templates/Designs/TTonline/Includes/PageTemplates/MasterHelpers.cshtml
@@ -140,16 +140,26 @@ if (string.IsNullOrEmpty(System.Web.HttpContext.Current.Request.Params["ProductI
       <script async src="https://www.googletagmanager.com/gtag/js?id=AW-970361168"></script><script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'AW-970361168'); </script>
 
       <!-- Hotjar Tracking Code for https://ttonline.ro -->
-      <script>
-          (function(h,o,t,j,a,r){
-              h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-              h._hjSettings={hjid:1231893,hjsv:6};
-              a=o.getElementsByTagName('head')[0];
-              r=o.createElement('script');r.async=1;
-              r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
-              a.appendChild(r);
-          })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
-      </script>
+    <script>
+      (function(h,o,t,j,a,r){
+        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+        h._hjSettings={hjid:1231893,hjsv:6};
+        a=o.getElementsByTagName('head')[0];
+        r=o.createElement('script');r.async=1;
+        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+        a.appendChild(r);
+      })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+    </script>
+    <!-- Global site tag (gtag.js) - Google Ads: 1010029401 -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-1010029401"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'AW-1010029401');
+    </script>
+
   </head>
 }
 @helper UserDoesNotExist()
