--- a/Templates/Designs/TTonline/Json/QueryPublisher/Articles.cshtml
+++ b/Templates/Designs/TTonline/Json/QueryPublisher/Articles.cshtml
@@ -4,7 +4,7 @@
 @using System.Text.RegularExpressions;
 @using System.Net;
 @using System;
-
+@Include("../../Custom/GlobalVariables.cshtml")
 @functions{
     
 
@@ -15,11 +15,18 @@
         public List<Article> Article { get; set; }
     }
 
-    public class Article
+	public class SectionsContainer
+	{
+		public string id { get; set; }
+		public string title { get; set; }
+		public string image { get; set; }
+	}
+
+	public class Article
     {
         public string[] itemAutori {get; set;}
         public string[] itemAutoriName {get; set;}
-        public DateTime itemData {get; set;}
+        public string itemData {get; set;}
         public string itemDeCompanie {get; set;}
         public string itemDespreCompanie {get; set;}
         public string itemEditie {get; set;}
@@ -36,6 +43,7 @@
         public string itemTip {get; set;}
         public string itemTitlu {get; set;}
         public int itemVisits {get; set;}
+	    public bool showItemVisits { get; set; }
         public bool pageActive {get; set;}
         public DateTime pageActiveTo {get; set;}
         public string pageAreaID {get; set;}
@@ -71,7 +79,7 @@
     public class Page
     {
         public bool isCurrent {get; set;}
-        public string pageNumber {get; set;}
+        public int pageNumber {get; set;}
         public string pageLink {get; set;}
     }
 
@@ -112,6 +120,7 @@
         public string showFilter { get; set; }
         public List<FacetOption> FacetOptions { get; set; }
     }
+	
     public class Root
     {
         public string currentPage {get; set;}
@@ -120,11 +129,15 @@
         public int totalPages {get; set;}
         public string pagingFirstPageLink {get; set;}
         public string pagingLastPageLink {get; set;}
+	    public bool isNotLastPage { get; set;}
         public string pagingNextButtonText {get; set;}
         public string pagingNextPageLink {get; set;}
         public string pagingNextPageNumber {get; set;}
+	    public string pagingPrevButtonText {get; set;}
+	    public string pagingPrevPageLink {get; set;}
+	    public string pagingPrevPageNumber {get; set;}
         public string pagingPageable {get; set;}
-        public string pagingPageCount {get; set;}
+        public int pagingPageCount {get; set;}
         public string pagingPageSize {get; set;}
         public string pagingTypeOfNextButton {get; set;}
         public string pagingTypeOfPreviousButton {get; set;}
@@ -136,6 +149,7 @@
         public List<Page> Pages {get; set;}
         public List<FacetGroup> FacetGroups { get; set; }
         public List<FacetSelection> FacetSelections { get; set; }
+	    public List<SectionsContainer> SectionsContainer { get; set; }
     }
     
 
@@ -147,20 +161,26 @@
 	var counter = 1;
     List<Root> feedObject = new List<Root>();
     List<ArticlesContainer> articleFeedObject = new List<ArticlesContainer>();
+	List<SectionsContainer> sectionsFeedObject = new List<SectionsContainer>();
 
     Root feedRoot = new Root();
     feedRoot.ArticlesContainer = new List<ArticlesContainer>();
+	feedRoot.Pages = new List<Page>();
     feedRoot.currentPage= GetString("DwPaging.CurrentPage");
     feedRoot.currentSection="";
     feedRoot.currentArticleType="";
     feedRoot.totalPages=GetInteger("DwPaging.TotalItems");
     feedRoot.pagingFirstPageLink=GetString("DwPaging.FirstPageLink");
     feedRoot.pagingLastPageLink=GetString("DwPaging.LastPageLink");
+	feedRoot.isNotLastPage = GetString("DwPaging.CurrentPage") != GetString("DwPaging.PageCount");
     feedRoot.pagingNextButtonText=GetString("DwPaging.NextButtonText");
     feedRoot.pagingNextPageLink=GetString("DwPaging.NextPageLink");
     feedRoot.pagingNextPageNumber=GetString("DwPaging.NextPageNumber");
+	feedRoot.pagingPrevButtonText=GetString("DwPaging.PreviousButtonText");
+	feedRoot.pagingPrevPageLink=GetString("DwPaging.PreviousPageLink");
+	feedRoot.pagingPrevPageNumber=GetString("DwPaging.PreviousPageNumber");
     feedRoot.pagingPageable=GetString("DwPaging.Pageable");
-    feedRoot.pagingPageCount=GetString("DwPaging.PageCount");
+    feedRoot.pagingPageCount=Convert.ToInt32(GetString("DwPaging.PageCount"));
     feedRoot.pagingPageSize=GetString("DwPaging.PageSize");
     feedRoot.pagingTypeOfNextButton=GetString("DwPaging.TypeOfNextButton");
     feedRoot.pagingTypeOfPreviousButton=GetString("DwPaging.TypeOfPreviousButton");
@@ -177,17 +197,17 @@
         Article articleObject = new Article();
         articleObject.itemAutori=(string[])article.GetValue("ItemAutori");
         articleObject.itemAutoriName=(string[])article.GetValue("ItemAutoriName");
-        articleObject.itemData=article.GetDate("ItemData");
+        articleObject.itemData= article.GetDate("ItemData").ToString("dd.MM.yyyy");
         articleObject.itemDeCompanie=article.GetString("ItemDeCompanie");
         articleObject.itemDespreCompanie=article.GetString("ItemDespreCompanie");
         articleObject.itemEditie=article.GetString("ItemEditie");
         articleObject.itemID=article.GetInteger("ItemID");
-        articleObject.itemImaginePrincipala=article.GetString("ItemImaginePrincipala");
+        articleObject.itemImaginePrincipala=article.GetString("ItemImaginePrincipala") != "" ? article.GetString("ItemImaginePrincipala") : areaLayoutPath + "/Files/Images/NoImage/540x355.png";
         articleObject.itemSectiuneParinte=article.GetString("ItemSectiuneParinte");
         articleObject.itemSectiuneParinteId=article.GetString("ItemSectiuneParinteId");
         articleObject.itemSectiuneSecundara=article.GetString("ItemSectiuneSecundara");
         articleObject.itemSiDespreCompanie=article.GetString("ItemSiDespreCompanie");
-        articleObject.itemSort=article.GetInteger("ItemSort");
+	    articleObject.itemSort = counter; //article.GetInteger("ItemSort");
         var itemSumarRaw = article.GetString("ItemSumar");
 	    articleObject.itemSumar = Regex.Replace(itemSumarRaw, @"[^\u0020-\u007E\u00A0-\u00FF]", string.Empty);
         string articleExcerpt = article.GetString("ItemSumar") != null ? article.GetString("ItemSumar") : "";
@@ -198,6 +218,7 @@
         articleObject.itemTip=article.GetString("ItemTip");
         articleObject.itemTitlu=article.GetString("ItemTitlu");
         articleObject.itemVisits=article.GetInteger("ItemVisits");
+	    articleObject.showItemVisits = article.GetBoolean("ItemVizite");
         articleObject.pageActive=article.GetBoolean("PageActive");
         articleObject.pageActiveTo=article.GetDate("PageActiveTo");
         articleObject.pageAreaID=article.GetString("PageAreaID");
@@ -249,6 +270,15 @@
 //Query.Parameters
 //QueryResultItem
 //DwPaging.LoopAllPages
+	foreach (var page in GetLoop("DwPaging.LoopPageGroup"))
+	{
+		var pageObj = new Page();
+
+		pageObj.isCurrent = page.GetBoolean("PageGroup.ActivePage");
+		pageObj.pageLink = page.GetString("PageGroup.PageLink");
+		pageObj.pageNumber  = Convert.ToInt32(page.GetString("PageGroup.PageNumber"));
+		feedRoot.Pages.Add(pageObj);
+	}
 //DwPaging.LoopPageGroup
 
 
