- placeholders for handlebars(1)

--- a/Templates/Designs/TTonline/Custom/Sidebar/New_Widget-Editorial.cshtml
+++ b/Templates/Designs/TTonline/Custom/Sidebar/New_Widget-Editorial.cshtml
@@ -4,7 +4,7 @@
 }
 <div class="widget editorialwidget" style="margin-bottom:0px;">
     <div class="content sidebar-handlebars-wrapper" role="listbox" data-template="WidgetEditorialTemplate"  data-json-feed="/Default.aspx?ID=@feedPageID&type=Editorial&PageSize=1">
-
+        @RenderPlaceholderNoImage()
     </div>
 </div>
 
