--- a/Templates/Designs/TTonline/Custom/Sidebar/New_Widget-Evenimente.cshtml
+++ b/Templates/Designs/TTonline/Custom/Sidebar/New_Widget-Evenimente.cshtml
@@ -9,6 +9,7 @@
 	<div id="myCarousel" class="carousel slide" data-ride="carousel">
 		<div class="carousel-inner sidebar-handlebars-wrapper" role="listbox" data-template="WidgetEvenimenteTemplate"  data-json-feed="/Default.aspx?ID=@eventsPageID">
 			@*Handlebars goes here*@
+			@RenderPlaceholderImageTop("pre-render-element--md")
 		</div>
 		
 		<a class="carousel-control" href="#myCarousel" role="button" data-slide="prev" style="color: #ffa700;">
