--- a/Templates/Designs/TTonline/Custom/Sidebar/New_Widget-Parteneri.cshtml
+++ b/Templates/Designs/TTonline/Custom/Sidebar/New_Widget-Parteneri.cshtml
@@ -5,7 +5,8 @@
     var parteneriPageID = GetPageIdByNavigationTag("ParteneriFeed");
 }
 <h3 class="block-title text-left"><span>@Translate("Parteneri","Parteneri") T&T</span></h3>
-<div class="owl-carousel owl-parteneri-1 owl-theme parteneri-list sidebar-handlebars-wrapper" data-template="ParteneriTemplate"  data-json-feed="/Default.aspx?ID=@articlesPageID&ParentPage=@parteneriPageID">
+<div class="owl-carousel owl-parteneri-1 owl-theme parteneri-list sidebar-handlebars-wrapper" data-template="ParteneriTemplate" data-json-feed="/Default.aspx?ID=@articlesPageID&ParentPage=@parteneriPageID">
+    @RenderPlaceholderCaruselImage()
 </div>
 
 <script id="ParteneriTemplate"  type="text/x-handlebars-template">  
