--- a/Templates/Designs/TTonline/New_LandingPage.cshtml
+++ b/Templates/Designs/TTonline/New_LandingPage.cshtml
@@ -1,4 +1,5 @@
 @MasterPageFile("Master.cshtml")
+@Include("Includes/New_PlaceholderHelpers.cshtml")
 @{
 string linkCatalog = Pageview.Area.Item["Link_Catalog"].ToString();
 string linkCompanii = Pageview.Area.Item["Link_Companii"].ToString();
