--- a/Templates/Designs/TTonline/Paragraph/New_ArticleListRecomandari.cshtml
+++ b/Templates/Designs/TTonline/Paragraph/New_ArticleListRecomandari.cshtml
@@ -4,6 +4,7 @@
 @using System.Linq;
 @using System.Web;
 @Include("../Includes/GetImage_new.cshtml")
+@Include("../Includes/New_PlaceholderHelpers.cshtml")
 
 @{
 	var pageId = GetPageIdByNavigationTag("ArticlesFeed");
@@ -22,13 +23,9 @@
 	</h3>
     <div id="RecomandariTT" data-template="RecomandariTTTemplate" data-json-feed="/Default.aspx?ID=@pageId&PageID=@articlesIDs">
          <div class="row">
-             <div class="pre-render-element pre-render-element--xl"></div>
-             <div class="col-md-6">
-                <div class="pre-render-element pre-render-element--lg"></div>
-             </div>
-             <div class="col-md-6">
-                 <div class="pre-render-element pre-render-element--lg"></div>
-              </div>
+             @RenderPlaceholderImageTop("pre-render-element--lg")
+             @RenderPlaceholderImageOnLeft()
+             @RenderPlaceholderImageOnLeft()
         </div>
     </div>
 </div>
