--- a/Templates/Designs/TTonline/New_Homepage.cshtml
+++ b/Templates/Designs/TTonline/New_Homepage.cshtml
@@ -2,6 +2,9 @@
 @GetValue("Title(Homepage)")
 @GetValue("Description(Homepage)")
 
+@Include("Includes/New_PlaceholderHelpers.cshtml")
+
+
 <div class="row">
   <div class="col-sm-12">
     @Include("Custom/FeaturedTags.cshtml")
