--- a/Templates/Designs/TTonline/New_SectionLandingPage.cshtml
+++ b/Templates/Designs/TTonline/New_SectionLandingPage.cshtml
@@ -4,6 +4,7 @@
 @using Dynamicweb.Rendering
 @Include("Includes/GetImage_new.cshtml")
 @Include("Includes/VerifyImage.cshtml")
+@Include("Includes/New_PlaceholderHelpers.cshtml")
 
 @functions {
   string returnPageID(string itemID) {
@@ -111,8 +112,8 @@ string filterValue8= "Item.Tip='Articole'";
                                 
           <h3 class="block-title"><span>Articole</span></h3>
           <div class="first-container" data-template="MainArticleTemplate" data-json-feed="/Default.aspx?ID=@articlesPageId&PageID=@mainArticleID">
-             
-          		@*Handlebars goes here*@
+              @*Handlebars goes here*@
+              @RenderPlaceholderImageTop("pre-render-element--xl")
           </div>
        }
        </div>
@@ -120,13 +121,15 @@ string filterValue8= "Item.Tip='Articole'";
 
     <div class="row hideSecondPage"><!-- row-ul pentru Articole secundar 1 si secundar 2-->
         @if(secondaryArticle1.Any()){
-          <div class="handlebars-wrapper display-title-up col-md-6" data-template="SecondaryArticleTemplate" data-json-feed="/Default.aspx?ID=@articlesPageId&PageID=@secondaryArticleID">
-               @*Handlebars goes here*@ 
-          </div>
+            <div class="handlebars-wrapper display-title-up col-md-6" data-template="SecondaryArticleTemplate" data-json-feed="/Default.aspx?ID=@articlesPageId&PageID=@secondaryArticleID">
+                @*Handlebars goes here*@
+               @RenderPlaceholderImageTop("pre-render-element--md")
+            </div>
         }
         @if(secondaryArticle2.Any()){     
             <div class="handlebars-wrapper display-title-up col-md-6" data-template="SecondaryArticleTemplate" data-json-feed="/Default.aspx?ID=@articlesPageId&PageID=@thirdArticleID">
-                 @*Handlebars goes here*@ 
+                @*Handlebars goes here*@ 
+               @RenderPlaceholderImageTop("pre-render-element--md")
             </div>
         }
     </div><!--se inchide row-ul pentru Articole-->
@@ -137,6 +140,12 @@ string filterValue8= "Item.Tip='Articole'";
     <div class="col-xs-12">
         <div class="row handlebars-wrapper display-title-up" id="LoopArticoleStiri" data-template="LoopArticoleStiriTemplate" data-json-feed="/Default.aspx?ID=@articlesPageId&pagesize=8&Sections=@sectionID&Excluded=@excludedArticles">
             @*Handlebars goes here*@ 
+            <div class="col-md-6 col-xs-12" style="padding-left: 0px">
+                @RenderPlaceholderImageTop("pre-render-element--md")
+            </div>
+            <div class="col-md-6 col-xs-12" style="padding-right: 0px">
+                @RenderPlaceholderImageTop("pre-render-element--md")
+            </div>
         </div>
     </div>
     
@@ -145,6 +154,10 @@ string filterValue8= "Item.Tip='Articole'";
             <h3 class="block-title" style="margin-top:25px!important;"><span>@Translate("Stiri","Stiri")</span></h3>
             <div class="row handlebars-wrapper display-title-up" id="LoopStiri" data-template="LoopStiriTemplate" data-json-feed="/Default.aspx?ID=@articlesPageId&Sections=@sectionID&pagesize=5&type=Stiri">
                 @*Handlebars goes here*@ 
+                @RenderPlaceholderImageOnLeft()
+                @RenderPlaceholderImageOnLeft()
+                @RenderPlaceholderImageOnLeft()
+                @RenderPlaceholderImageOnLeft()
             </div>
             <div class="row load-more">
                 <a href='/stiri?Sectiune=@sectionID'><button type="button" class="btn btn-lg btn-block">@Translate("MaiMulteStiri","Mai multe stiri")</button></a>
@@ -172,7 +185,9 @@ string filterValue8= "Item.Tip='Articole'";
     <div class="carousel-produse">
         <div class="owl-carousel owl-theme handlebars-wrapper display-title-up" data-template="LoopProduseTemplate" data-json-feed="/Default.aspx?ID=@productsPageId&Promoted=@productsIDs">
                 @*Handlebars goes here*@ 
-            </div>
+                @RenderPlaceholderCaruselText()
+                @RenderPlaceholderCaruselText()
+        </div>
      </div>
 </div>
 
@@ -532,7 +547,7 @@ string filterValue8= "Item.Tip='Articole'";
       </div>   
      </div>
     }
-}
+
  </div>
 {{/each}} 
 </script>
