--- a/Templates/Designs/TTonline/Paragraph/New_CaruselProduseHomepage.cshtml
+++ b/Templates/Designs/TTonline/Paragraph/New_CaruselProduseHomepage.cshtml
@@ -6,6 +6,8 @@
 
 @Include("../Custom/GlobalVariables.cshtml")
 @Include("../Includes/GetImage_new.cshtml")
+@Include("../Includes/New_PlaceholderHelpers.cshtml")
+
 
 @{
     string Producator = System.Web.HttpContext.Current.Request["Producator"] != null ? System.Web.HttpContext.Current.Request["Producator"].ToString(): "";
@@ -24,8 +26,9 @@
 	<h3 class="block-title"><span>@GetString("Item.Titlu")</span></h3>
     <div class="carousel-produse">
         <div class="owl-carousel owl-theme handlebars-wrapper" data-template="CaruselProduseTemplate" data-slides-number="4" data-json-feed="/Default.aspx?ID=@pageId&Promoted=@productsIDs">
-            <div class="loader"></div>
-            @*HANDLEBARS TEMPLATE GOES HERE*@
+            <div class="col-md-12">
+                        @RenderPlaceholderCaruselText()
+            </div>
         </div>
     </div>
 </div>
@@ -78,7 +81,7 @@
                        {{#ifCond manufacturer "!==" ""}}
                           <div class="col-xs-6" >      
                                <p class="simple-share manufacturer" style="text-align:left; font-size: 12px; line-height: 1.2;">
-                                 <text class="trim-lines-2">@Translate("manufacturer", "Producator"):</text>         
+                                 <text class="trim-text trim-lines-2">@Translate("manufacturer", "Producator"):</text>         
                                </p>
                           </div>
                         <div class="col-xs-6">
@@ -105,7 +108,7 @@
                       
                         <div class="col-xs-6" style="text-align: center;">
                           <p class="simple-share manufacturer" style="text-align:left; font-size: 12px; line-height: 1.2;">
-                         <text class="trim-lines-2" style="color:black;">{{dealerResult}}</text>
+                         <text class="trim-text trim-lines-2" style="color:black;">{{dealerResult}}</text>
                           </p>
                         </div>
                    </div>
