--- a/Templates/Designs/TTonline/Paragraph/New_ListaParteneri.cshtml
+++ b/Templates/Designs/TTonline/Paragraph/New_ListaParteneri.cshtml
@@ -10,21 +10,22 @@
 @Include("../Custom/GlobalVariables.cshtml")
 @Include("../Includes/ArticleHelper.cshtml")
 @Include("../Includes/GetImage_new.cshtml")
+@Include("../Includes/New_PlaceholderHelpers.cshtml")
 @{
     var articlesPageID = GetPageIdByNavigationTag("ArticlesFeed");
     var parteneriPageID = GetPageIdByNavigationTag("ParteneriFeed");
     string requestUrl = "http://" + GetGlobalValue("Global:Request.Host"); 
 }
 
-<div class="row">
-    <div class="col-md-12 col-xs-12">
-        <h1 class="block-title"><span>@GetString("Item.ParagraphName")</span></h1>
-        <div class="owl-carousel owl-parteneri owl-theme parteneri-list handlebars-wrapper" data-template="ParteneriTemplate" data-json-feed="/Default.aspx?ID=@articlesPageID&ParentPage=@parteneriPageID">
-            <div class="loader"></div>
-            @*HANDLEBARS TEMPLATE GOES HERE*@
-        </div>
+<div class="col-md-12 col-xs-12">
+    <h1 class="block-title"><span>@GetString("Item.ParagraphName")</span></h1>
+    <div class="owl-carousel owl-parteneri owl-theme parteneri-list handlebars-wrapper" data-template="ParteneriTemplate" data-json-feed="/Default.aspx?ID=@articlesPageID&ParentPage=@parteneriPageID">
+        @RenderPlaceholderCaruselImage()
+        @RenderPlaceholderCaruselImage()
+        @RenderPlaceholderCaruselImage()
     </div>
 </div>
+
 
 
 <script id="ParteneriTemplate" type="text/x-handlebars-template">
