Companii carusel, added helpers

--- a/Templates/Designs/TTonline/Paragraph/New_CarouselCompanii-4.cshtml
+++ b/Templates/Designs/TTonline/Paragraph/New_CarouselCompanii-4.cshtml
@@ -1,5 +1,6 @@
 @Include("../Custom/GlobalVariables.cshtml")
 @Include("../Includes/GetImage_new.cshtml")
+@Include("../Includes/New_PlaceholderHelpers.cshtml")
 <style>
   .owl-carousel .owl-item img {width:auto!important;}
 </style>
@@ -19,8 +20,7 @@
     <h4><span class="tipcompanie-homepage-tag" style="background-color: #cc0033;">@GetString("Item.Titlu")</span></h4>
     <div class="carousel-companii caruselMarginBottom">
         <div class="owl-carousel owl-companii-1 owl-theme handlebars-wrapper" data-template="CarouselCompanii1Template" data-slides-number="4" data-json-feed="/Default.aspx?ID=@pageId&CompanieID=@companiesIDs">
-            <div class="loader"></div>
-            @*HANDLEBARS TEMPLATE GOES HERE*@
+            @RenderPlaceholderCaruselText()
          </div>
     </div>
 </div>
