--- a/Templates/Designs/TTonline/Paragraph/New_ArticleListBySection.cshtml
+++ b/Templates/Designs/TTonline/Paragraph/New_ArticleListBySection.cshtml
@@ -125,7 +125,7 @@
 					<a href="{{Link}}">{{Name}}</a>
 					{{/articleAutori}}
 					<br/>
-					<span><i class="fa fa-clock-o"></i> {{itemData}} </span>
+					<span class="article-date"><i class="fa fa-clock-o"></i> {{itemData}} </span>
 					@*TODO conditie de afisafe din feed *@
 					{{#if showItemVisits}}
                         <span>  -  <i class="fa fa-eye"></i> {{itemVisits}} vizualizari</span>
