--- a/Templates/Designs/TTonline/New_ContentAutor.cshtml
+++ b/Templates/Designs/TTonline/New_ContentAutor.cshtml
@@ -13,15 +13,17 @@
 @using System.Web
 
 @{
-    var autoriPageID = GetPageIdByNavigationTag("ArticlesFeed").ToString();
+    
     string queryAutor = HttpContext.Current.Request.QueryString["autor"];
-    var url = "/Default.aspx?ID="+autoriPageID+"&pagesize=12";
+    var articlePageID = GetPageIdByNavigationTag("ArticlesFeed").ToString();
+    var url = "/Default.aspx?ID="+articlePageID+"&pagesize=10";
+    var autorPageID = GetPageIdByNavigationTag("AutoriFeed").ToString();
+    var urlAutor = "/Default.aspx?ID="+autorPageID;
     if (!string.IsNullOrEmpty(queryAutor))
     {
         url += "&Autori="+ queryAutor;
     }
-    var autorPageID = GetPageIdByNavigationTag("AutoriFeed").ToString();
-    var urlAutor = "/Default.aspx?ID="+autorPageID;
+   
     if (!string.IsNullOrEmpty(queryAutor))
     {
         urlAutor += "&autor="+ queryAutor;
@@ -35,17 +37,17 @@
           <div class="row">
           <div class="col-xs-12">
               <div class="first-container" id="LoopAutor" data-template="LoopAutorTemplate" data-json-feed="@urlAutor">
-                  <div id="loader"></div>
+                   <div class="author-box clearfix ">
+                        @RenderPlaceholderImageOnLeft()
+                   </div>
               </div>
-                 
           </div>
           </div>
         </header>
             <div class="post-content clearfix">
        <div class="row">
           <div class="col-xs-12">
-              <div class="handlebars-wrapper" id="LoopAutori" data-template="LoopAutoriTemplate" data-json-feed="@url">
-                  <div id="loader"></div>
+              <div class="handlebars-wrapper" id="LoopAutori" data-template="LoopArticoleTemplate" data-json-feed="@url">
                     <ul class="widget-content">
                       @RenderPlaceholderImageOnLeft()
                       @RenderPlaceholderImageOnLeft()
@@ -59,78 +61,88 @@
         <div class="dwcontent" id="maincontent" title="Main Content" settings="unwrap:true"></div>
       </div><!-- .post-content -->
     </article><!-- .post-wrapper -->
-
-                    
-          <!-- Mid ad -->
+        <!-- Mid ad -->
        
           <!-- End Mid ad -->
 </div><!-- End Left big column -->
 
 <div class="col-md-4" data-stickycolumn>
   <div style="display: none;"><a href='/Default.aspx?ID=@GetPageIdByNavigationTag("companii")' class="read-more">@Translate("Profil companie", "Profil companie")</a></div>
-  @Include("Custom/Sidebar.cshtml")
+  @Include("Custom/New_Sidebar.cshtml")
 </div><!-- End last column -->        
 </div><!-- .blog-content -->
+
+<div id="loader"><div class="loader-icon"></div></div>
 <!-- Google Analytics -->
 <script>
 window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
 ga('create', 'UA-26068739-1', 'auto');
-
-
-// START DIMENSIUNI
-
-// DIMENSIUNI PENTRU Romanian Industry Zoom:
-  //var dw_editie = 'NUMAR_EDITIE';
-  //var dw_autor = '';
-  //var dw_companie = 'NUME_COMPANIE';
-  //var dw_data_aparitie = 'DATA_APARITIE'; // format dd.mm.yyyy
-
-  //ga('set', 'dimension1', dw_editie);
-//ga('set', 'dimension2', dw_autor);
-  //ga('set', 'dimension3', dw_companie);
-  //ga('set', 'dimension9', dw_data_aparitie);
-
-// END DIMENSIUNI
-
-
 ga('send', 'pageview');
 </script>
 <script async src='https://www.google-analytics.com/analytics.js'></script>
 <!-- End Google Analytics -->
 
 <!-- Handlebars Template-->
-<script id="LoopAutoriTemplate" type="text/x-handlebars-template">
+<script id="LoopArticoleTemplate" type="text/x-handlebars-template">
     {{#ArticlesContainer}}
         {{#each Article}}
             <article class="simple-post simple-big clearfix col-md-12 separator-articole media">		
                 <div class="simple-thumb media-left media-top" style="width: 265px;">
-                 	<a href="{{Link}}">
+                 	<a href="/Default.aspx?ID={{pagePageID}}">
                  	  <figure class="image-overlay">
-                 	    <img src="/Admin/Public/GetImage.ashx?Image={{itemImaginePrincipala}}&AlternativeImage=/Files/Images/Articole/download (1).png&Crop=5&Format=jpg&Width=350&Height=230&bgcolor=white">
+                 	    <img src="/Admin/Public/GetImage.ashx?Image={{itemImaginePrincipala}}&AlternativeImage=/Files/Images/Articole/download (1).png&Crop=5&Format=jpg&Width=240&Height=155&bgcolor=white">
                  	  </figure>
                  	</a> 
-            </div>
-
+                 </div>
               <header class="media-body">
-            <p class="simple-share" style="color: #bbbbbb; font-weight: 400;">
-                
-                <span style="margin: 0;">/</span>
-                @Translate("articolde","de")
-                 {{#each articleAutori}}
-              <a href="{{Link}}" class="link-autor" style="color: #999999 !important; font-weight: 400 !important;">{{Name}}</a>
-                 {{/each}}      
-                <span class="article-date"><i class="fa fa-clock-o"></i> {{itemData}}</span>
-            </p>
-
-            <h3>
-              <a href="/Default.aspx?ID={{pagePageID}}">{{itemTitlu}}</a>
-            </h3>
-
-            {{{itemSumar}}}
+                <p class="simple-share" style="color: #bbbbbb; font-weight: 400;">   
+                    <a href="/Default.aspx?ID={{itemSectiuneParinteId}}" style="color:#999 !important;font-weight:400 !important">{{itemSectiuneParinte}}</a>            
+                    <span style="margin: 0;">/</span>
+                    @Translate("articolde","de")
+                     {{#each articleAutori}}
+                  <a href="{{Link}}" class="link-autor" style="color: #999999 !important; font-weight: 400 !important;">{{Name}}</a>
+                     {{/each}}      
+                    <span class="article-date"><i class="fa fa-clock-o"></i> {{itemData}}</span>
+                </p>
+                <h3>
+                  <a href="/Default.aspx?ID={{pagePageID}}">{{itemTitlu}}</a>
+                </h3>
+                {{{itemSumar}}}
             </header>
              </article> 
         {{/each}}
     {{/ArticlesContainer}}
+    {{#ifCond pagingPageCount '>' 1}}
+        <nav>
+            <ul class="pagination pagination-sm">
+                {{#ifCond currentPage "!==" "1"}}
+                     <li data-page-link="{{pagingFirstPageLink}}" data-container="LoopArticoleTemplate">                			        
+                        <span style="margin-right: 0.2em"> « </span>                 
+                     </li>
+                     <li data-page-link="{{pagingPrevPageLink}}" data-container="LoopArticoleTemplate">
+                        <span aria-label="@Translate("paginaAnterioara", "Pagina anterioara")"><span aria-hidden="true"><i class="fa fa-angle-left"></i></span></span>
+                     </li>
+                {{/ifCond}}
+                
+                {{#Pages}}
+                    {{#if isCurrent}}
+                       <li class="active"><span data-page-link="{{pageLink}}">{{pageNumber}}</span></li>
+                    {{else}}
+                       <li data-page-link="{{pageLink}}" data-container="LoopArticoleTemplate"><span>{{pageNumber}}</span></li>
+                    {{/if}}                
+                {{/Pages}}
+    
+                {{#if isNotLastPage}}
+                    <li data-page-link="{{pagingNextPageLink}}" data-container="LoopArticoleTemplate">
+                        <span aria-label='@Translate("paginaUrmatoare", "Pagina urmatoare")'><span aria-hidden="true"><i class="fa fa-angle-right"></i></span></span>                     
+                    </li>
+                    <li data-page-link="{{pagingLastPageLink}}" data-container="LoopArticoleTemplate">
+                        <span> » </span>
+                    </li>
+                {{/if}}
+            </ul>
+        </nav>
+     {{/ifCond}}
 </script>
 
 <script id="LoopAutorTemplate" type="text/x-handlebars-template">
@@ -144,9 +156,7 @@ ga('send', 'pageview');
          {{#ifCond persoana_companie "===" "Persoana"}}
              <div class="author-box clearfix ">
                 <div class="author-avatar">
-
                     <img alt="" src="/Admin/Public/GetImage.ashx?Image={{itemImaginePrincipala}}&AlternativeImage=/Files/Images/Articole/download (1).png&Crop=5&Format=jpg&Width=100&Height=150&bgcolor=white" >
-
                 </div>
                 <div class="author-info">
                   <h3><a href="">{{name}}</a></h3>
