Changes in template file structure

--- a/Templates/Designs/TTonline/Json/QueryPublisher/Articles.cshtml
+++ b/Templates/Designs/TTonline/Json/QueryPublisher/Articles.cshtml
@@ -159,6 +159,9 @@
     int paginaAutori = GetPageIdByNavigationTag("PaginaAutori");
     int paginaTag = GetPageIdByNavigationTag("PaginaTag");
 	var counter = 1;
+	var pageNumberParameterValue = System.Web.HttpContext.Current.Request.Params["PageNum"];
+	int pageNun= 0;
+	Int32.TryParse(pageNumberParameterValue.ToString(), out pageNun);
     List<Root> feedObject = new List<Root>();
     List<ArticlesContainer> articleFeedObject = new List<ArticlesContainer>();
 	List<SectionsContainer> sectionsFeedObject = new List<SectionsContainer>();
@@ -270,6 +273,13 @@
 //Query.Parameters
 //QueryResultItem
 //DwPaging.LoopAllPages
+	
+	@
+	{
+		var firstPage =;
+		var currentPage =;
+		var left1=
+	}
 	foreach (var page in GetLoop("DwPaging.LoopPageGroup"))
 	{
 		var pageObj = new Page();
@@ -278,6 +288,7 @@
 		pageObj.pageLink = page.GetString("PageGroup.PageLink");
 		pageObj.pageNumber  = Convert.ToInt32(page.GetString("PageGroup.PageNumber"));
 		feedRoot.Pages.Add(pageObj);
+		
 	}
 //DwPaging.LoopPageGroup
 
