--- a/Templates/Designs/TTonline/Paragraph/New_ListStiri.cshtml
+++ b/Templates/Designs/TTonline/Paragraph/New_ListStiri.cshtml
@@ -8,16 +8,10 @@
 @Include("../Includes/GetImage_new.cshtml")
 @Include("../Includes/New_PlaceholderHelpers.cshtml")
 @{
-    var stiriPageID = GetPageIdByNavigationTag("ArticlesFeed").ToString();
-    var sectionID = System.Web.HttpContext.Current.Request.Params["Sectiune"];
-    var url = "/Default.aspx?ID="+stiriPageID+"&pagesize=12&type=Stiri";
-    if (!string.IsNullOrEmpty(sectionID))
-    {
-        url += "&Sections="+ sectionID;
-    }
+    
 
 }
-<div>
+
     <div class="row">
         <div class="col-xs-12">
             <div class="first-container" id="LoopStiri" data-template="LoopStiriTemplate" data-json-feed="@url">
@@ -31,13 +25,13 @@
             </div>
         </div>
     </div>
-</div>
+
 <script id="LoopStiriTemplate" type="text/x-handlebars-template">
 {{#ArticlesContainer}}
     {{#each Article}}
         <article class="simple-post simple-big clearfix col-md-12 separator-articole">
             <div class="simple-thumb" style="width: 250px!important;">
-                <a href="/Default.aspx?ID={{pagePageID}}">
+                <a href="aa">
                     <figure class="">
                         <img src="/Admin/Public/GetImage.ashx?Image={{itemImaginePrincipala}}&AlternativeImage=/Files/Images/Articole/download (1).png&Crop=0&Format=jpg&Width=255&Height=168"/> 
                     </figure>
