--- a/Templates/Designs/TTonline/css/10_custom/New_Homepage.css
+++ b/Templates/Designs/TTonline/css/10_custom/New_Homepage.css
@@ -307,4 +307,10 @@
 .news-details {
     position: relative;
 }
-    
+.author-box {
+    clear: both;
+}
+
+#myCarousel .item>span {
+    height: 50px;
+}
